nginx_balancer-two_services/project_one/p1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-one
spec:
  ports:
    - port: 8080
  selector:
    app: hello-world-one
