nginx_balancer-two_services/project_one/p1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: "/hello"
          pathType: Prefix
          backend:
            service:
              name: hello-world-one
              port:
                number: 8080
